--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -8,7 +8,9 @@
 
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
       <a class="me-3 py-2 text-dark text-decoration-none" href="/expenses">Expenses</a>
+      <a class="me-3 py-2 text-dark text-decoration-none" href="/expenses/add">Add expenses</a>
       <a class="me-3 py-2 text-dark text-decoration-none" href="/currencies">Currencies</a>
+      <a class="me-3 py-2 text-dark text-decoration-none" href="/currencies/add">Add currency</a>
       <a class="me-3 py-2 text-dark text-decoration-none" href="/sections">Sections</a>
       <a class="py-2 text-dark text-decoration-none" href="/about">About</a>
     </nav>
