--- a/src/main/resources/templates/currency_add.html
+++ b/src/main/resources/templates/currency_add.html
@@ -10,16 +10,14 @@ pom.xml <artifactId>spring-boot-starter-thymeleaf</artifactId> in dependencies--
 <body>
 <header th:insert="blocks/header :: header"></header>
 
-<div class="container mt-5">
-  <h1>Expenses</h1>
-  <div th:each="el : ${budget}" class="alert alert-info mt-2">
-    <h3 th:text="${el.what_is}"/>
-    <h3 th:text="${el.total}"/>
-    <h3 th:text="${el.currency}"/>
-    <h3 th:text="${el.date}"/>
-  </div>
+<div class="container mt-5 mb-5">
+  <h1>Add currency</h1>
+  <form action="/currencies/add" method="post">
+    <input type="text" name="currency" placeholder="currency" class="form-control">
+    <input type="text" name="country" placeholder="country" class="form-control">
+    <button type="submit" class="btn btn-success">Add</button>
+  </form>
 </div>
-
 
 <div th:insert="/blocks/footer :: footer"></div>
 
