--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -13,7 +13,8 @@
       <a class="me-3 py-2 text-dark text-decoration-none" href="/currencies/add">Add currency</a>
       <a class="me-3 py-2 text-dark text-decoration-none" href="/sections">Sections</a>
       <a class="me-3 py-2 text-dark text-decoration-none" href="/sections/add">Add Sections</a>
-      <a class="py-2 text-dark text-decoration-none" href="/about">About</a>
+      <a class="me-3 py-2 text-dark text-decoration-none" href="/about">About</a>
+      <a class="py-2 text-dark text-decoration-none" href="#">Login</a>
     </nav>
   </div>
 </div>
