--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <!--use template engine which we call in
 pom.xml <artifactId>spring-boot-starter-thymeleaf</artifactId> in dependencies-->
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
   <title th:text="${title}" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -10,8 +11,13 @@ pom.xml <artifactId>spring-boot-starter-thymeleaf</artifactId> in dependencies--
 <body>
 <header th:insert="blocks/header :: header"></header>
 <!--we use syntacsis template engine thymeleaf TH -->
+
   <p th:text="${title} + '!'" />
 <main>
+  <h1 th:inline="text">Hello <span th:remove="tag" sec:authentication="name">thymeleaf</span>!</h1>
+  <form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+  </form>
 
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
